--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
-<body>
-    <button type="button">LED</button>`
-</body>
+<html>
+    <head>
+      <title>RPI LED</title>
+    </head>
+
+    <body>
+        <input type="checkbox" name="checkbox" id="checkbox" onclick="onClick()"/>
+        <script src="static/index.js"></script>
+    </body>
 </html>
